<resources>
	<string name="activity_main_clear_loaded_chart">Clear loaded chart</string>
	<string name="activity_main_load_chart">Load chart</string>
	<string name="activity_main_load_chart_failed_title">Load failed</string>
	<string name="activity_main_load_chart_failed_couldnt_find_chart_file">Couldn\'t find a chart file. Please check if there is a chart file in the zip pack then retry.</string>
	<string name="activity_main_load_chart_failed_unsupported_file_type">Unsupported file type. Please modify the file extension or change the file then retry.</string>
	<string name="activity_main_permissions_request_title">Permissions request</string>
	<string name="activity_main_permissions_request_message">The application is a chart converter, which needs read and write permissions to access the external storage of the device. This won\'t be used for other purposes. If you don\'t allow to grant the permissions, please click "CANCEL" to exit the application.</string>
	<string name="activity_main_plugins">Plugins (EXPERIMENTAL)</string>
	<string name="activity_main_plugin_manager">Plugin manager</string>
	<string name="activity_main_plugin_manager_empty">No avaliable plugins. Please click "IMPORT PLUGIN" to import a plugin.</string>
	<string name="activity_main_plugin_manager_import_plugin">IMPORT PLUGIN</string>
	<string name="activity_main_plugin_manager_message">Click on an item to delete the plugin:</string>
	<string name="activity_main_plugin_modified_successfully">Plugin modified successfully. You need to restart the application to apply changes.</string>
	<string name="activity_main_save_properties">Save properties</string>
	<string name="activity_main_settings">Settings</string>
	<string name="activity_main_select_folder">Select folder...</string>
	<string name="activity_main_select_save_location">Select save location: </string>
	<string name="activity_main_start_convert">Start convert</string>
	<string name="activity_main_tab_chart_list">Chart List</string>
	<string name="activity_main_tab_convertion_options">Convertion Options</string>
	<string name="activity_main_tab_faq">FAQ</string>
	<string name="activity_minesweeper_mines_left">Mines left: </string>
	<string name="activity_minesweeper_settings">Minesweeper settings</string>
	<string name="activity_minesweeper_settings_cols">Cols: </string>
	<string name="activity_minesweeper_settings_mines">Mines: </string>
	<string name="activity_minesweeper_settings_rows">Rows: </string>
	<string name="activity_minesweeper_settings_seed">Seed (Leave blank for randomness): </string>
	<string name="activity_minesweeper_time_used">Time used: </string>
	<string name="activity_minesweeper_title">Minesweeper</string>
	<string name="activity_rick_title">Get Rickrolled lol</string>
	<string name="activity_settings_saf">SAF (Storage Access Framework)</string>
	<string name="activity_settings_initial_folder">Initial folder: </string>
	<string name="activity_settings_select_initial_folder">Select initial folder</string>
	<string name="activity_settings_use_last_folder">Use last folder</string>
	<string name="app_name">Malody2Phigros</string>
	<string name="april_fools_dialog_title">Malody2Phigros has stopped being supported</string>
	<string name="april_fools_dialog_message">New production has been released! Isn\'t it amazing? Press the LINK below to get one</string>
	<string name="april_fools_dialog_ok">LINK</string>
	<string name="crash_cancel">Ignore</string>
	<string name="crash_ok">Copy the error message</string>
	<string name="crash_title">PhigrOS crashed</string>
	<string name="fragment_chart_list_delete_chart">Delete chart</string>
	<string name="fragment_chart_list_description_artist">Artist: </string>
	<string name="fragment_chart_list_description_creator">Creator: </string>
	<string name="fragment_chart_list_description_mode">Mode: </string>
	<string name="fragment_chart_list_description_title">Title: </string>
	<string name="fragment_chart_list_description_version">Version: </string>
	<string name="fragment_chart_list_modify_title">Modify title: </string>
	<string name="fragment_chart_list_no_loaded_chart">No loaded chart. Please click "+" button to load one.</string>
	<string name="fragment_chart_list_pack_converted_chart">Pack converted chart</string>
	<string name="fragment_convertion_options_default_wide">Default note wide: </string>
	<string name="fragment_convertion_options_default_speed">Default speed: </string>
	<string name="fragment_convertion_options_default_y">Judge line default Y: </string>
	<string name="fragment_convertion_options_drag_alpha">Drag alpha: </string>
	<string name="fragment_convertion_options_drag_interval">Drag interval: </string>
	<string name="fragment_convertion_options_enable_const">Enable const mode</string>
	<string name="fragment_convertion_options_enable_drag">Enable guide Drag</string>
	<string name="fragment_convertion_options_enable_luck">Enable luck mode</string>
	<string name="fragment_convertion_options_fake_drag">Fake Drag</string>
	<string name="fragment_convertion_options_general">General</string>
	<string name="fragment_convertion_options_invisible_line_message">The Y pos you input will make the judge line invisible. This may cause the chart becoming unplayable. Are you sure to keep this value?</string>
	<string name="fragment_convertion_options_invisible_line_yes">Yes, I want to keep it</string>
	<string name="fragment_convertion_options_invisible_line_no">No, make it to default pls</string>
	<string name="fragment_convertion_options_is_cover">Judge line cover</string>
	<string name="fragment_convertion_options_negative_speed_message">You inputed a negative speed. This may cause the chart becoming unplayable. Are you sure to keep this value?</string>
	<string name="fragment_convertion_options_negative_speed_yes">Yes, I want to keep it</string>
	<string name="fragment_convertion_options_negative_speed_no">No, make it positive pls</string>
	<string name="fragment_convertion_options_note">Note: Modify default note wide to 0 will make the converter ignore the wide property of all notes in the original chart. Jump effect convertion is not supported for now. Please use scroll or sv to replace them. osu!mania converter is still in developing.</string>
	<string name="fragment_convertion_options_slide_process_mode">Slide process mode: </string>
	<string name="fragment_convertion_options_slide_mode_moving_hold">Convert to moving hold</string>
	<string name="fragment_convertion_options_slide_mode_straight_hold">Convert to straight hold</string>
	<string name="fragment_convertion_options_slide_mode_tap_with_drags">Convert to Tap+Drags</string>
	<string name="fragment_faq_chart_packing_title">Why my converted chart is not packed? / Why my converted chart is .json format?</string>
	<string name="fragment_faq_chart_packing_content">If the format of the chart you imported is .mc or .osu, you CANNOT get the packed chart; If not, you will need to long click the imported chart and enable the "Pack converted chart" option by yourself to get the packed chart.</string>
	<string name="fragment_faq_how_to_make_a_plugin_title">How to make a plugin?</string>
	<string name="fragment_faq_how_to_make_a_plugin_content">The plugin system uses WebView to load plugins. The system only supports JavaScript to code a plugin for now. If you need to custom a user interface, please use document.body.innerHTML to modify the HTML content.</string>
	<string name="please_wait">Please wait...</string>
	<string name="unknown">Unknown</string>
</resources>
