<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="top|center">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/activity_settings_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

	</com.google.android.material.appbar.AppBarLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/activity_settings_saf"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:padding="8dp"/>

	<View
		android:background="?android:attr/dividerVertical"
		android:layout_width="match_parent"
		android:layout_height="1dp"/>

	<Switch
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:textSize="16sp"
		android:text="@string/activity_settings_use_last_folder"
		android:id="@+id/activity_settings_use_last_folder"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/activity_settings_initial_folder"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:padding="8dp"
		android:textSize="16sp"
		android:id="@+id/activity_settings_initial_folder"/>

	<Button
		android:layout_width="match_parent"
		style="?android:attr/buttonBarButtonStyle"
		android:layout_height="wrap_content"
		android:text="@string/activity_settings_select_initial_folder"
		android:id="@+id/activity_settings_select_initial_folder"/>

</LinearLayout>

